# robotics-os-project-1

./: .gitignore  CMakeLists.txt  README.md  command.txt
include/: util.h
include/rix/msg/: serialization.hpp
include/robot/: robot.h
src/: cmd_parser.c  cmd_receiver.c  drive_square.c  teleop.c  util.c
src/mbot_driver/: mbot_driver.cpp
src/rix/ipc/: fifo.cpp  file.cpp  pipe.cpp  signal.cpp
src/robot/: robot.c
src/teleop_keyboard/: teleop_keyboard.cpp
